# LLMCircuitUI

./: .gitignore  CMakeLists.txt  README.md  circuit.json
docs/: architecture.md  cli.md  development-journal.md  nodes.md  types.md
src/: GraphController.h  LogicEngine.h  main.cpp
src/ExecuteEngine/: APIBackend.h  ExecuteEngine.h  InferenceBackend.h  LlamaBackend.h  TokenCache.h
tests/: test_datatype.cpp  test_llama_backend.cpp  test_nodes_ir.cpp
web/: blueprint.html
